<resources>
    <string name="app_name">EduCracyPedia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_news"> News</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_terms">Terms</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate Us</string>
    <string name="menu_studycentral">Studycentral</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>